[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "boosters"
version = "0.1.0"
description = "Fast gradient boosting library"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["machine-learning", "gradient-boosting", "xgboost", "lightgbm"]

dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
pandas = ["pandas>=1.3"]
sklearn = [
    "scikit-learn>=1.0",
]
shap = ["shap>=0.42"]
xgboost = ["xgboost>=1.7"]
lightgbm = ["lightgbm>=4.0"]
convert = [
    "xgboost>=1.7",
    "lightgbm>=4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "maturin>=1.5",
]
all = [
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "shap>=0.42",
    "xgboost>=1.7",
    "lightgbm>=4.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "boosters._boosters_python"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "strict"
include = ["python", "tests"]
exclude = ["**/__pycache__"]
# External library interactions have incomplete stubs
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
# Pandas DataFrame operations return dynamic types
reportUnknownParameterType = false
# sklearn-style X = check_X_y(...) is conventional but triggers this
reportConstantRedefinition = false
# External libraries (xgboost, lightgbm, sklearn) have incomplete type annotations
reportAttributeAccessIssue = false
# sklearn-style APIs intentionally use untyped X, y parameters
reportMissingParameterType = false
# Pandas type inference issues with DataFrame operations
reportArgumentType = false
reportCallIssue = false
reportAssignmentType = false
reportInvalidTypeForm = false
# Unused imports in tests for availability checking
reportUnusedImport = false

[tool.ruff]
target-version = "py39"
line-length = 100
include = ["python/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "D",      # pydocstyle
    "RUF",    # Ruff-specific
]
ignore = [
    "D100",   # Missing docstring in public module (handled by __init__.py)
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__ (sklearn estimators document params in class docstring)
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D213",   # Multi-line docstring summary should start at the second line (conflicts with D212)
    "E402",   # Module level import not at top of file (sklearn fallback pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",      # No docstring requirements in tests
    "B017",   # Allow pytest.raises(Exception) in tests
    "F401",   # Unused imports OK in tests (availability checks)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["boosters"]

[dependency-groups]
dev = [
    "maturin>=1.10.2",
    "pyright>=1.1.0",
    "pytest>=8.4.2",
    "ruff>=0.5.0",
]
