[project]
name = "data-generation"
version = "0.1.0"
description = "Test data and benchmark dataset generation for booste-rs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.1",
]
